style: fixed gap size on .container to 1.5rem

--- a/CSS-Projects/Grid-Projects/Grid-and-Flexbox-Projects/css/Grid-Flexbox-Project-1.css
+++ b/CSS-Projects/Grid-Projects/Grid-and-Flexbox-Projects/css/Grid-Flexbox-Project-1.css
@@ -111,7 +111,7 @@ main {
   grid-template-columns: repeat(3, 1fr); 
   grid-auto-rows: minmax(180px, auto);       
   /* grid-template-rows: repeat(3, 200px);        */
-  gap: 15px;
+  gap: 1.5rem;
   width: 80%;
   min-width: 1200px;
 }
